tests/bad/16/test.scm
(let ((a (lambda (y y) y))) (a))